correction fautes one page, one page prête à 80%, commencement des mockup

--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -96,8 +96,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     </span>
                 </div>
                 <!-- /.headlines-wrapper -->
-                <h3 class="first-headline">Des experts en conception digitale développent des solutions simple</h3>
-                <h3 class="second-headline">et efficace pour <span> votre évolution professionnelle ! </span></h3>
+                <h3 class="first-headline">Des experts en conception digitale développent des solutions simples</h3>
+                <h3 class="second-headline">et efficaces pour <span> votre évolution professionnelle ! </span></h3>
 
             </div>
             <!-- /.col-lg-12 -->
@@ -119,7 +119,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="col-md-12">
                 <h4 class="wow fadeInLeft animated">Nous développons, vous aidons à déployer <span>vos
                 idées et votre savoir-faire</span> sur l’ensemble <span>des terminaux connectés</span><br></br>
-                Nous sommes les experts de <span>la digitalisation des loisirs et culturel</span>
+                Nous sommes les experts de <span>la digitalisation des espaces de loisirs et culturels</span>
                 pour que votre univers <span>traverse les écrans</span> et touche vos visiteurs et futurs clients<br></br>
                 Nous mettons en œuvre <span>des solutions simples et efficaces</span> à travers des plateformes
                 multi-supports pour vous aider à gérer vos contenus et vos services <span>en toute autonomie</span>
@@ -145,7 +145,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="row">
 
             <div class="col-md-12 see-work">
-                <h2 class="wow fadeInLeft animated">Nos fonctionnalités <span>révolutionnaire pour vous !</span></h2>
+                <h2 class="wow fadeInLeft animated">Nos fonctionnalités <span>révolutionnaires pour vous !</span></h2>
             </div>
             <!-- /.see-work -->
             <div class="col-md-12 new-style">
@@ -233,11 +233,11 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <span>Fidéliser un client ou un visiteur et en apporter de nouveaux !</span>
                     </h3>
                       <p class="wow fadeIn animated"> C'est un enjeu majeur pour le développement des
-                        espaces professionnel de loisirs et culturels. Le notre d'enjeu est de renforcer
+                        espaces professionnels de loisirs et culturels. Le notre d'enjeu est de renforcer
                         l'expérience utilisateur de vos canaux de communication en optimisant ses intérations.
                       </p>
                       <p class="wow fadeIn animated">Vous obtiendrez des visiteurs en plus ainsi qu'un outils
-                        performant personalisé pour transformer ces nouveaux visiteurs en nouveaux client.
+                        performant personalisé pour transformer ces nouveaux visiteurs en nouveaux clients.
                       </p>
                     <ul class="about-icons list-inline">
                         <li class="wow fadeIn animated">
@@ -327,7 +327,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="col-md-12 service-headline">
                 <h2 class="wow fadeIn animated"> Ce que nous faisons, nous le faisons <span> mieux !</span></h2>
                 <p class="wow fadeIn animated">
-                  Nous apportons notre expertise à votre entrprise pour booster votre chiffre d'affaire
+                  Nous apportons notre expertise à votre entreprise pour booster votre chiffre d'affaire
                   grâce au web. Nous concevons vos plateformes de communication digitale pour développer votre business.
                 </p>
             </div>
@@ -356,7 +356,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <div class="service wow fadeIn animated">
                         <div class="text">
                             <h4>Reférencement Optimisé</h4>
-                            <p>Référencement organique ou sponsorisé pout une notoriété améliorée.</p>
+                            <p>Référencement organique ou sponsorisé pour une notoriété améliorée.</p>
                         </div>
                         <div class="icons">
                             <i class="material-icons">visibility</i>
@@ -445,7 +445,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <h2 class="wow fadeIn animated">Pourquoi<span> Nous ? </span></h2>
                     <p class="wow fadeIn animated">
                         Nos ingénieurs d'expertise en intelligence numérique
-                        vous aident imaginer des solutions digitales adaptées à votre univers.
+                        vous aident à imaginer des solutions digitales adaptées à votre univers.
                     </p>
                     <p class="wow fadeIn animated">
                         Nos développeurs agréés et créatifs sont nos ingénieurs de tous les possibles.
@@ -453,7 +453,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     </p>
                     <p class="wow fadeIn animated">
                         Nos experts en stratégie digitale vous accompagnent afin de créer
-                        des intérfaces qui vous ressemble et booste votre visibilité.
+                        des intérfaces qui vous ressemble et booster votre visibilité.
                     </p>
                 </div>
             </div>
@@ -462,7 +462,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="col-md-12 progress-bar-wrapper">
                 <div class="progress-bars">
                     <div class="bar-wrapper">
-                        <div class="col-md-3 col-sm-3 col-xs-4 wow fadeIn animated">Strategie digitale</div>
+                        <div class="col-md-3 col-sm-3 col-xs-4 wow fadeIn animated">Stratégie digitale</div>
                         <div class="col-md-8 col-sm-8 col-xs-7">
                             <div class="progressBar gradient wow animated first-bar"></div>
                         </div>
