ajout mockup + iphone

--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -258,17 +258,17 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <!-- /.about-text -->
                 <div class="about-images">
                     <div class="mockup image-left">
-                        <img class="wow fadeInLeft animated" src="assets/images/ipads-left.png" alt="ipad">
+                        <img class="wow fadeInLeft animated" src="assets/images/ipads_left_2.png" alt="ipad">
                     </div>
                     <!-- /.image-left -->
 
                     <div class="mockup image-center">
-                        <img class="wow slideInUp animated" src="assets/images/ipads-center.png" alt="ipad">
+                        <img class="wow slideInUp animated" src="assets/images/ipads_center_2.png" alt="ipad">
                     </div>
                     <!-- /.image-center -->
 
                     <div class="mockup image-right">
-                        <img class="wow fadeInRight animated" src="assets/images/ipads-right.png" alt="ipad">
+                        <img class="wow fadeInRight animated" src="assets/images/ipads_right_2.png" alt="ipad">
                     </div>
                     <!-- /.image-right -->
                 </div>
@@ -364,7 +364,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     </div>
                 </div>
                 <div class="service-image">
-                    <img src="assets/images/iphone-services.png" alt="iphone">
+                    <img src="assets/images/iphone6.png" alt="iphone">
                 </div>
                 <div class="right">
                     <div class="service-2 wow fadeIn animated">
