--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -231,7 +231,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="col-lg-12">
 
                 <div class="about-text">
-                    <h2 class="wow fadeIn animated">Pouquoi <span> Vous ?</span></h2><br></br>
+                    <h2 class="wow fadeIn animated">Pourquoi <span> Vous ?</span></h2><br></br>
                     <h3 class="wow fadeIn animated">
                         <span>Fidéliser un client ou un visiteur et en apporter de nouveaux !</span>
                     </h3>
