text file d'attente

--- a/particle_dark/file_dattente.html
+++ b/particle_dark/file_dattente.html
@@ -94,7 +94,7 @@
                                 </div>
                                 <!-- /.typed-headline -->
 
-                                <a href="#" class="btn btn-default pull-right hvr-sweep-to-right" id="project-info">Project Info</a>
+                                <a href="#" class="btn btn-default pull-right hvr-sweep-to-right" id="project-info">L'explication...</a>
                             </div>
                         </div>
                     </div>
@@ -110,57 +110,65 @@
     </div>
     <!-- /.container-fluid -->
 </section>
-<!-- Services Section
+
+<!-- Image Section
 ================================================== -->
-<section id="services" class="services-section">
+<section id="big-image" class="image-section">
 
     <div class="container">
 
         <div class="row">
 
+            <div class="col-md-12">
+                <h4 class="wow fadeInLeft animated">Nous passons en moyenne<span> 5j par an </span>dans une file d’attente,
+                  c’est à dire que dans votre vie, nous allons passer<span> une année entière à attendre.</span>
+                  Notre ambition est d’améliorer la qualité de la vie quotidienne. Notre service permet<span> d’optimiser ces tâches quotidiennes </span>
+                  en ne prenant plus compte de l’attente éventuelle. <br></br>
+                  <span>Pensez à tout ce que l’on pourrait faire, pourrait vivre !!</span> Les professionnels se heurtent à des problèmes de file d’attente tout les jours,
+                  ils n’en peuvent plus et <span>nous non plus !</span>
+                </h4>
+            </div>
+            <!-- /.col-md-12 -->
+        </div>
+        <!-- /.row -->
+    </div>
+    <!-- /.container -->
+</section>
+<!-- /.image section -->
+<!-- Services Section
+================================================== -->
+<section id="services" class="services-section">
+
+    <div class="container-fluid">
+
+        <div class="row">
+
             <div class="col-md-12 service-headline">
-                <h2 class="wow fadeIn animated"> Ce que nous faisons, nous le faisons <span> mieux !</span></h2>
+                <h2 class="wow fadeIn animated"> L'application qui permet à vos clients de prendre un ticket et <span>d'attendre en faisant autre chose.</span></h2>
                 <p class="wow fadeIn animated">
-                  Nous apportons notre expertise à votre entrprise pour booster votre chiffre d'affaire
-                  grâce au web. Nous concevons vos plateformes de communication digitale pour développer votre business.
+                  C'est votre téléphone qui attend à votre place ! L'application vous averti de l'avancement de la file d'attente et lorsque votre tour approche.
                 </p>
+                <p class="wow fadeIn animated">
+                En prenant un ticket virtuel grâce à notre application mobile, le client est alerté lorsque son tour approche et le professionnel peut gérer l’affluence de ses clients de manière sécurisée.
+                </p>
+
             </div>
             <!-- /.service-headline -->
 
             <div class="col-md-12 service-content">
-                <div class="left">
-                    <div class="service wow fadeIn animated">
-                        <div class="text">
-                            <a href="service-item.html">Web Design</a>
-                            <p>Une visibilité et une utilisation agréable et simple.</p>
-                        </div>
-                        <div class="icons">
-                            <i class="material-icons">touch_app</i>
-                        </div>
-                    </div><br></br>
-                    <div class="service wow fadeIn animated">
-                        <div class="text">
-                            <a href="service-item.html">Responsive Design</a>
-                            <p>Compatible et s'adapte à tout type de support.</p>
-                        </div>
-                        <div class="icons">
-                            <i class="material-icons">important_devices</i>
-                        </div>
-                    </div><br></br>
-                    <div class="service wow fadeIn animated">
-                        <div class="text">
-                            <a href="service-item.html">Reférencement Optimisé</a>
-                            <p>Référencement organique ou sponsorisé pout une notoriété améliorée.</p>
-                        </div>
-                        <div class="icons">
-                            <i class="material-icons">visibility</i>
-                        </div>
-                    </div>
+
+                <div class="service-image">
+                    <img src="assets/images/iphone-services.png" alt="iphone"> <br></br>
+                    <p>Une visibilité et une utilisation agréable et simple.</p>
                 </div>
                 <div class="service-image">
-                    <img src="assets/images/iphone-services.png" alt="iphone">
+                    <img src="assets/images/iphone-services.png" alt="iphone"><br></br>
+                    <p>Une visibilité et une utilisation agréable et simple.</p>
                 </div>
-                
+                <div class="service-image">
+                    <img src="assets/images/iphone-services.png" alt="iphone"><br></br>
+                    <p>Une visibilité et une utilisation agréable et simple.</p>
+                </div>
             </div>
             <!-- .service-content -->
         </div>
