--- a/particle_dark/file_dattente.html
+++ b/particle_dark/file_dattente.html
@@ -159,15 +159,15 @@
 
                 <div class="service-image">
                     <img src="assets/images/iphone-services.png" alt="iphone"> <br></br>
-                    <p>Une visibilité et une utilisation agréable et simple.</p>
+                    <p>Une interface de prise de ticket directement sur votre site.</p>
                 </div>
                 <div class="service-image">
                     <img src="assets/images/iphone-services.png" alt="iphone"><br></br>
-                    <p>Une visibilité et une utilisation agréable et simple.</p>
+                    <p>L'application avertit le client de l'avancement.</p>
                 </div>
                 <div class="service-image">
                     <img src="assets/images/iphone-services.png" alt="iphone"><br></br>
-                    <p>Une visibilité et une utilisation agréable et simple.</p>
+                    <p>Le client est avertit lorsque que son approche.</p>
                 </div>
             </div>
             <!-- .service-content -->
