ajout banière et liens contact

--- a/particle_dark/file_dattente.html
+++ b/particle_dark/file_dattente.html
@@ -178,173 +178,157 @@
 </section>
 <!-- /.service-section -->
 
-<section class="portfolio-item-details" id="portfolio-details">
+<!-- Call To Action Section
+================================================== -->
+<section id="call-to" class="call-to-section">
+
+    <div class="call-to-layer"></div>
 
     <div class="container">
 
         <div class="row">
 
-            <div class="col-lg-12">
+            <div class="col-md-12">
+                <h3 class="wow fadeIn animated">Cette solution facilite <span>tous les professionnels ayant des files d’attente !</span></h3>
+                <p class="wow fadeIn animated">  Les professionnels de l’évènementiel, des billetteries, les prestataires
+                  (médecins libéraux, esthétique, bien-être..), les gérants d'espaces de loisirs et culturels..
+                  Cette solution est pour ceux qui ont un intérêt à diminuer la densité de leurs files d’attente
+                  afin d’améliorer leur expérience client et accroître leurs ventes.</p>
+                <a class= "page-scroll" href="file_dattente.html#contact2">
+                <button class="btn btn-default wow fadeInRight hvr-sweep-to-right animated">Essayez gratuitement !</button>
+                </a>
+            </div>
+            <!-- /.col-md-12 -->
+        </div>
+        <!-- /.row -->
+    </div>
+    <!-- /.container -->
+</section>
 
-                <div class="col-lg-8 col-md-12">
+<!-- Contact Section
+================================================== -->
+<section id="contact2" class="contact-section">
 
-                    <div class="portfolio-text">
-                        <h3>About the <span>project</span></h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.
-                            Sed
-                            cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis
-                            sagittis
-                            ipsum. Praesent mauris. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec
-                            odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh
-                            elementum
-                            imperdiet. Duis sagittis ipsum. Praesent mauris.
-                        </p>
-                    </div>
-                    <!-- /.service-text -->
+    <div class="container">
 
-                    <div class="portfolio-useful-links">
-                        <h3>Useful <span>links</span></h3>
-                        <ul class="list-inline portfolio-icons">
-                            <li>
-                                <a href="#">
-                                    <i class="material-icons">laptop</i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="material-icons">description</i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="material-icons">done_all</i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fa fa-facebook" aria-hidden="true"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fa fa-dribbble" aria-hidden="true"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fa fa-behance" aria-hidden="true"></i>
-                                </a>
-                            </li>
-                        </ul>
-                        <!-- /.list-inline -->
-                    </div>
+        <div class="row">
 
-                    <div class="portfolio-download-links">
-                        <h3>Download <span>links</span></h3>
-                        <ul class="list-inline portfolio-icons">
-                            <li>
-                                <a href="#">
-                                    <i class="material-icons">laptop</i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="material-icons">description</i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="material-icons">done_all</i>
-                                </a>
-                            </li>
-                        </ul>
-                        <!-- /.list-inline -->
-                    </div>
+            <div class="col-md-12">
 
+                <div class="contact-headline">
+                    <h3 class="wow fadeIn animated"><span>Contactez-nous</span></h3>
 
                 </div>
+                <!-- /.contact-headline -->
 
-                <div class="col-lg-4 col-md-12">
-                    <ul class="portfolio-info">
-                        <li>
-                            <p class="first">Project Name</p>
-                            <p class="second">Awesome project</p>
-                        </li>
-                        <li>
-                            <p class="first">Created By</p>
-                            <p class="second">John Smith</p>
-                        </li>
-                        <li>
-                            <p class="first">Client</p>
-                            <p class="second">Microsoft</p>
-                        </li>
-                        <li>
-                            <p class="first">Budget</p>
-                            <p class="second">$50,000.000</p>
-                        </li>
-                        <li>
-                            <p class="first">Completion Date</p>
-                            <p class="second">May 30th 2017</p>
-                        </li>
-                        <li>
-                            <p class="first">Project Type</p>
-                            <p class="second">Web Development</p>
-                        </li>
-                        <li>
-                            <p class="first">Project Length</p>
-                            <p class="second">3 months</p>
-                        </li>
-                        <li>
-                            <p class="first">Skills Used</p>
-                            <p class="second">JavaScript, PHP</p>
-                        </li>
-                        <li>
-                            <p class="first">Project Manager</p>
-                            <p class="second">Dejan Stankovic</p>
-                        </li>
-                    </ul>
-                    <!-- /.list-inline -->
-                </div>
+                <div class="contact-content">
+                    <div class="contact-info">
+                        <p class="contact-header">Nos locaux : <span> Sudri'cub</span></p>
+                        <div class="info-line">
+                            <div class="info-icon wow fadeIn animated">
+                                <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                            </div>
+                            <div class="info-text wow fadeIn animated">
+                                <p>contact@morman.fr</p>
+                            </div>
+                        </div>
+                        <div class="info-line">
+                            <div class="info-icon wow fadeIn animated">
+                                <i class="fa fa-phone" aria-hidden="true"></i>
+                            </div>
+                            <div class="info-text wow fadeIn animated">
+                                <p>(+33) 6.34.68.32.35 / (+33) 6.78.12.23.91</p>
+                            </div>
+                        </div>
 
-                <div class="col-lg-12 col-md-12">
-                    <div class="portfolio-form">
-                        <h3>Get <span>Involved</span></h3>
-                        <form>
-                            <div class="form-group">
-                                <label for="name">Name: </label>
+                        <div class="info-line">
+                            <div class="info-icon wow fadeIn animated">
+                                <i class="fa fa-address-card-o" aria-hidden="true"></i>
+                            </div>
+                            <div class="info-text wow fadeIn animated">
+                                <p>38 rue Molière</p>
+                            </div>
+                        </div>
+
+                        <div class="info-line">
+                            <div class="info-icon wow fadeIn animated">
+                                <i class="fa fa-map-marker" aria-hidden="true"></i>
+                            </div>
+                            <div class="info-text wow fadeIn animated">
+                                <p>94200 Ivry sur Seine</p>
+                            </div>
+                        </div><br></br>
+
+                        <div class="bottom-info">
+                            <h4 class="wow fadeIn animated"><span>Connectez-vous</span> avec nous</h4>
+
+                            <ul class="list-inline social-icons wow fadeIn animated">
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-youtube" aria-hidden="true"></i>
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-linkedin" aria-hidden="true"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- /.contact-info -->
+
+                    <div class="contact-form">
+                        <h4 class="wow fadeIn animated">Envoyez nous <span>un message...</span></h4>
+
+                        <form method="post">
+                            <div class="form-group wow fadeIn animated">
+                                <label for="name">Votre Nom - Prénom - Société : </label>
                                 <input type="text" id="name" name="name" class="form-control">
                             </div>
                             <!-- /.form-group -->
 
-                            <div class="form-group">
-                                <label for="email">Email: </label>
+                            <div class="form-group wow fadeIn animated">
+                                <label for="email">Votre Email : </label>
                                 <input type="email" id="email" name="email" class="form-control">
                             </div>
                             <!-- /.form-group -->
 
-                            <div class="form-group">
-                                <label for="message">Message: </label>
-                                <textarea id="message" name="message" class="form-control" rows="3"></textarea>
+
+                            <div class="form-group wow fadeIn animated">
+                                <label for="message">Votre Message : </label>
+                                <textarea id="message" name="message" class="form-control" rows="4"></textarea>
                             </div>
                             <!-- /.form-group -->
 
-                            <button type="submit" class="btn btn-default">Submit</button>
+
+                            <button class="btn btn-default wow fadeIn animated" type="submit">Envoyez</button>
+
                         </form>
                     </div>
-                    <!-- /.portfolio-form -->
+                    <!-- /.contact-form -->
                 </div>
-
+                <!-- /.contact-content -->
             </div>
+            <!-- /.col-md-12 -->
         </div>
-
+        <!-- /.row -->
     </div>
-
+    <!-- /.container -->
 </section>
+<!-- /.contact-section -->
 
 <!-- Footer
 ================================================== -->
 <footer>
-    <p>Copyright © 2017 -<a href="http://www.skilltechwebdesign.com"> SkillTech</a></p>
+    <p><a href="$">MORMAN DESIGN </a>© 2017<br></br><a href="$"> Confidentialité</a> |
+      <a href="$">Condition d'utilisation</a> | <a href="$">La loi informatique et liberté</a></p>
 </footer>
 
 <!-- Scripts
