--- a/particle_dark/file_dattente.html
+++ b/particle_dark/file_dattente.html
@@ -193,7 +193,13 @@
                 <p class="wow fadeIn animated">  Les professionnels de l’évènementiel, des billetteries, les prestataires
                   (médecins libéraux, esthétique, bien-être..), les gérants d'espaces de loisirs et culturels..
                   Cette solution est pour ceux qui ont un intérêt à diminuer la densité de leurs files d’attente
-                  afin d’améliorer leur expérience client et accroître leurs ventes.</p>
+                  afin d’améliorer leur expérience client et accroître leurs ventes.</p><br></br>
+                  <p class="wow fadeIn animated"> Fini les heures passées devant une attraction !</p>
+                  <p class="wow fadeIn animated"> Fini les interminables queues à la préfecture ou aux services publics !</p>
+                  <p class="wow fadeIn animated"> Fini le stress et l'énervement de ne pas savoir quand notre tour approche !</p>
+                  <p class="wow fadeIn animated"> Fini les serpentins sous la Tour Eiffel !</p><br></br>
+                  <p class="wow fadeIn animated"> <span>Avec notre savoir-faire, l'attente devient détente ! Désormais,
+                    permettez à vos clients d'attendre à plusieurs endroits en même temps !</span></p>
                 <a class= "page-scroll" href="file_dattente.html#contact2">
                 <button class="btn btn-default wow fadeInRight hvr-sweep-to-right animated">Essayez gratuitement !</button>
                 </a>
