--- a/particle_dark/file_dattente.html
+++ b/particle_dark/file_dattente.html
@@ -34,7 +34,7 @@
     <![endif]-->
 
 </head>
-<body>
+<body id="page-top" data-spy="scroll" data-target="#st-nav">
 
 <!-- Navigation Menu
 ================================================== -->
@@ -93,8 +93,9 @@
 
                                 </div>
                                 <!-- /.typed-headline -->
-
-                                <a href="#" class="btn btn-default pull-right hvr-sweep-to-right" id="project-info">L'explication...</a>
+                                <a class= "page-scroll" href="file_dattente.html#big-image2">
+                                <button  class="btn btn-default pull-right hvr-sweep-to-right" id="project-info">L'explication...</button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -113,7 +114,7 @@
 
 <!-- Image Section
 ================================================== -->
-<section id="big-image" class="image-section">
+<section id="big-image2" class="image-section">
 
     <div class="container">
 
@@ -355,5 +356,6 @@
     var sentences = ["La nouvelle expérience de l'attente"];
 </script>
 <script src="assets/js/custom/portfolio-item.js"></script>
+<script src="assets/js/custom/particle-theme-dark.js"></script>
 </body>
 </html>
