correction page-scroll file d'attente

--- a/particle_dark/file_dattente.html
+++ b/particle_dark/file_dattente.html
@@ -93,7 +93,7 @@
 
                                 </div>
                                 <!-- /.typed-headline -->
-                                <a class= "page-scroll" href="file_dattente.html#big-image2">
+                                <a class= "page-scroll" href="#big-image">
                                 <button  class="btn btn-default pull-right hvr-sweep-to-right" id="project-info">L'explication...</button>
                                 </a>
                             </div>
@@ -114,7 +114,7 @@
 
 <!-- Image Section
 ================================================== -->
-<section id="big-image2" class="image-section">
+<section id="big-image" class="image-section">
 
     <div class="container">
 
@@ -201,7 +201,7 @@
                   <p class="wow fadeIn animated"> Fini les serpentins sous la Tour Eiffel !</p><br></br>
                   <p class="wow fadeIn animated"> <span>Avec notre savoir-faire, l'attente devient détente ! Désormais,
                     permettez à vos clients d'attendre à plusieurs endroits en même temps !</span></p>
-                <a class= "page-scroll" href="file_dattente.html#contact2">
+                <a class= "page-scroll" href="#contact">
                 <button class="btn btn-default wow fadeInRight hvr-sweep-to-right animated">Essayez gratuitement !</button>
                 </a>
             </div>
@@ -214,7 +214,7 @@
 
 <!-- Contact Section
 ================================================== -->
-<section id="contact2" class="contact-section">
+<section id="contact" class="contact-section">
 
     <div class="container">
 
@@ -347,9 +347,12 @@
 <script src="assets/js/libraries/bootstrap.js"></script>
 
 <!-- JavaScript Libraries -->
+<script src="assets/js/libraries/jquery.easing.1.3.js"></script>
 <script src="assets/js/libraries/typed.js"></script>
 <script src="assets/js/libraries/wow.js"></script>
 <script src="assets/js/libraries/particles.js"></script>
+<script src="assets/js/libraries/waypoint.js"></script>
+<script src="assets/js/libraries/jquery.counterup.js"></script>
 
 <!-- Custom Particle Theme JavaScript -->
 <script>
