--- a/particle_dark/cartographie.html
+++ b/particle_dark/cartographie.html
@@ -115,46 +115,17 @@
         <div class="row">
 
             <div class="col-md-12 service-headline">
-                <h2 class="wow fadeIn animated"> Ce que nous faisons, nous le faisons <span> mieux !</span></h2>
+                <h2 class="wow fadeIn animated"> La géolocalisation de Google, directement sur <span> votre plan !</span></h2>
                 <p class="wow fadeIn animated">
-                  Nous apportons notre expertise à votre entrprise pour booster votre chiffre d'affaire
-                  grâce au web. Nous concevons vos plateformes de communication digitale pour développer votre business.
+                  Nous vous apportons notre expertise pour fournir un plan intéractif de votre espace à vos clients.
+                  Aidez vos visiteurs à s'orienter.
                 </p>
             </div>
             <!-- /.service-headline -->
 
             <div class="col-md-12 service-content">
-                <div class="left">
-                    <div class="service wow fadeIn animated">
-                        <div class="text">
-                            <a href="service-item.html">Web Design</a>
-                            <p>Une visibilité et une utilisation agréable et simple.</p>
-                        </div>
-                        <div class="icons">
-                            <i class="material-icons">touch_app</i>
-                        </div>
-                    </div><br></br>
-                    <div class="service wow fadeIn animated">
-                        <div class="text">
-                            <a href="service-item.html">Responsive Design</a>
-                            <p>Compatible et s'adapte à tout type de support.</p>
-                        </div>
-                        <div class="icons">
-                            <i class="material-icons">important_devices</i>
-                        </div>
-                    </div><br></br>
-                    <div class="service wow fadeIn animated">
-                        <div class="text">
-                            <a href="service-item.html">Reférencement Optimisé</a>
-                            <p>Référencement organique ou sponsorisé pout une notoriété améliorée.</p>
-                        </div>
-                        <div class="icons">
-                            <i class="material-icons">visibility</i>
-                        </div>
-                    </div>
-                </div>
                 <div class="service-image">
-                    <img src="assets/images/iphone-services.png" alt="iphone">
+                    <img src="assets/images/iphone_carto.png" alt="iphone">
                 </div>
                 <div class="right">
                     <div class="service-2 wow fadeIn animated">
@@ -162,9 +133,8 @@
                             <i class="material-icons">mood</i>
                         </div>
                         <div class="text">
-                            <a href="service-item.html">Expérience Utilisateur</a>
-                            <p>Des fonctionnalités concues pour vos clients et votre entreprise.
-                               (Billeterie, Cartographie, File d'attente numérique)</p>
+                            <a href="service-item.html">Géolocalisation précise</a>
+                            <p>La précision de Google map sur votre plan. </p>
                         </div><br></br>
                     </div>
                     <div class="service-2 wow fadeIn animated">
@@ -172,7 +142,7 @@
                             <i class="material-icons">trending_up</i>
                         </div>
                         <div class="text">
-                            <a href="service-item.html">Business</a>
+                            <a href="service-item.html">Temps réel</a>
                             <p>Des outils de statistiques et de prévisions de
                               votre chiffres d'affaire, relences clients</p>
                         </div>
@@ -182,7 +152,7 @@
                             <i class="material-icons">autorenew</i>
                         </div>
                         <div class="text">
-                            <a href="service-item.html">Autonome</a>
+                            <a href="service-item.html">Itinéraires intelligents</a>
                             <p>News letters automatisées, envoie ciblé</p>
                         </div>
                     </div>
