--- a/particle_dark/cartographie.html
+++ b/particle_dark/cartographie.html
@@ -108,7 +108,7 @@
 
 <!-- Services Section
 ================================================== -->
-<section id="services" class="services-section">
+<section id="service-details" class="services-section">
 
     <div class="container">
 
@@ -130,7 +130,7 @@
                 <div class="right">
                     <div class="service-2 wow fadeIn animated">
                         <div class="icons">
-                            <i class="material-icons">mood</i>
+                            <i class="material-icons">location_on</i>
                         </div>
                         <div class="text">
                             <a href="service-item.html">Géolocalisation précise</a>
@@ -139,21 +139,21 @@
                     </div>
                     <div class="service-2 wow fadeIn animated">
                         <div class="icons">
-                            <i class="material-icons">trending_up</i>
+                            <i class="material-icons">near_me</i>
                         </div>
                         <div class="text">
                             <a href="service-item.html">Temps réel</a>
-                            <p>Des outils de statistiques et de prévisions de
-                              votre chiffres d'affaire, relences clients</p>
+                            <p>Le rafraichissement instentané offre un outils à vos client pour s'orienter facilement</p>
                         </div>
                     </div><br></br>
                     <div class="service-2 wow fadeIn animated">
                         <div class="icons">
-                            <i class="material-icons">autorenew</i>
+                            <i class="material-icons">directions_walk</i>
                         </div>
                         <div class="text">
                             <a href="service-item.html">Itinéraires intelligents</a>
-                            <p>News letters automatisées, envoie ciblé</p>
+                            <p>Possibilité de rechercher un endroit sur la carte et de faire apparaitre
+                              un itinéraire géolocalisé directement sur votre plan.</p>
                         </div>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
 
 <!-- Contact Section
 ================================================== -->
-<section id="service-details" class="contact-section">
+<section id="contact" class="contact-section">
 
     <div class="container">
 
